darkmatter/lib/tests/l1/error_snapshots/snapshots/l1__error_snapshots__transclusion__file_reference.snap
---
source: darkmatter/lib/tests/l1/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: file reference failure
┃ 
┃ file reference syntax is invalid: unclosed brace
┃ 
┃ failure: invalid-reference
┃ 
┃ Check sigil usage: `@` magic, `&` repository root, `^` repository-scoped.
