darkmatter/lib/tests/l1/error_snapshots/snapshots/l1__error_snapshots__transclusion__missing_source_context.snap
---
source: darkmatter/lib/tests/l1/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: missing source context
┃ 
┃ Could not resolve ./sibling.md at line 4.
┃ 
┃ Note: Relative transclusions require a file-backed source.
┃ 
┃ Try using an absolute path or @/ repo-root reference.
