darkmatter/lib/tests/l1/error_snapshots/snapshots/l1__error_snapshots__transclusion__missing_source_context_markup.snap
---
source: darkmatter/lib/tests/l1/error_snapshots/transclusion.rs
expression: out
---
⤫ TransclusionError: missing source context
┃ 
┃ Could not resolve ./{{bold}}evil.md at line 1.
┃ 
┃ Note: Relative transclusions require a file-backed source.
┃ 
┃ Try using an absolute path or @/ repo-root reference.
