darkmatter/lib/tests/l1/error_snapshots/snapshots/l1__error_snapshots__transclusion__unsupported_reference_type.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
assertion_line: 88
expression: out
---
⤫ TransclusionError: unsupported reference type
┃ 
┃ The reference ftp://host/file uses an unsupported scheme or syntax.
┃ 
┃ Supported: ./relative, implicit, @magic, &repo-root, ^repo-scoped,
┃ ~/home, vault:, %, {{ENV}}
