darkmatter/lib/tests/l1/error_snapshots/snapshots/l1__error_snapshots__transclusion__unsupported_reference_type_markup.snap
---
source: darkmatter/lib/tests/error_snapshots/transclusion.rs
assertion_line: 335
expression: out
---
⤫ TransclusionError: unsupported reference type
┃ 
┃ The reference ftp://host/<script>alert(1)</script> uses an unsupported
┃ scheme or syntax.
┃ 
┃ Supported: ./relative, implicit, @magic, &repo-root, ^repo-scoped,
┃ ~/home, vault:, %, {{ENV}}
